[package]
name = "minecraft-server-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
follow-redirects = { git = "https://github.com/stevenroose/rust-follow-redirects/", branch = "update-deps" }
hyper-tls = "0.5.0"

termcolor = "1.1"
home = "0.5.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tar = "0.4.38"
chrono = "0.4"